1.2.0:
    WATO:
    * FIX: add missing icon on cluster hosts to WATO in Multisite views

    Checks & Agents: 
    * fileinfo: added this check to Linux agent. Simply put your
      file patterns into /etc/check_mk/fileinfo.cfg for configuration.
    * mysql.sessions: New check for MySQL sessions (need new plugin mk_mysql)
    * mysql.innodb_io: New check for Disk-IO of InnoDB
    * mysql_capacity: New check for used/free capacity of MySQL databases
    * postgres_sessions: New check for PostgreSQL number of sessions
    * postgres_stat_database: New check for PostgreSQL database statistics
    * postgres_stat_database.size: New check for PostgreSQL database size
    * FIX: hpux_if: convert_to_hex was missing on non-SNMP-hosts -replace
      with inline implementation
    * tcp_conn_stats: handle state BOUND (found on Solaris)
    * diskstat: support for checking latency, LVM and VxVM on Linux (needs 
      updated agent)

1.2.0b6:
    Multisite:
    * FIX: Fixed layout of some dropdown fields in view filters
    * Make heading in each page clickable -> reload page
    * FIX: Edit view: couldn't edit filter settings
    * FIX: Fixed styling of links in multisite context help
    * FIX: Fixed "select all" button for IE
    * FIX: Context links added by hooks are now hidden by the display
           option "B" again
    * FIX: preselected "refresh" option did not reflect view settings
           but was simply the first available option - usually 30.
    * FIX: fixed exception with custom views created by normal users

    WATO:
    * FIX: Fixed "select all" button in hosts & folders for IE
    * Optically mark modified variables in global settings
    * Swapped icons for rule match and previous rule match (makes for sense)

    Core:
    * FIX: Fixed "make_utf is not defined" error when having custom
           timeperiods defined in WATO

    Checks & Agents: 
    * MacOS X: Agent for MacOS (Thanks to Christian Zigotzky)